Adding base color tiles

--- a/substance_tiles.html
+++ b/substance_tiles.html
@@ -40,14 +40,19 @@
         </p>
         <p>
             <span class="newthoughti">Base color</span>
-            Add two 'Gradient Map' nodes and one 'Tile Generator' node. Change to color of the 'Gradient Maps'
-            and change the 'Tile Generator' as follows:
+            Add two 'Uniform Color' nodes and one 'Tile Generator' node. Change to color of the 'Uniform Color' nodes to
+            light blue (#ff49beec) and blue-ish white (#ffd6f2f6) and change the 'Tile Generator' as follows:
             <ul>
                 <li>Scale: 1.1 (this will make the grout gaps very thin)</li>
                 <li>Random Mask: 0.13 (this will render certain tiles black)</li>
             </ul>
         </p>
-        <p>Hook the up as shown in figure X</p>
+        <p>Add a Blend node and connect everything up as shown below:</p>
+        <p>
+            <figure>
+                <img src="img/substance_tiles/substancebasecolor.png" alt="Creating a new Substance" />
+            </figure>
+        </p>
         <p>
             <span class="newthoughti">Grout</span>
 
