first blog post

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Welcome to Giant Robot
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <title>Giant Robot I/O</title>
+    <link rel="stylesheet" href="tufte.css"/>
+    <link rel="stylesheet" href="latex.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <h1 id="tufte-css">Olivier's Technology Blog</h1>
+    <article>
+        <section>
+            <p>
+            <h3><a href="substance_tiles.html">Creating a simple material in Substance Designer</a></h3>
+            <br/>
+            Small step by step tutorial on how to create a simple material in <a href="https://www.allegorithmic.com/products/substance-designer">Substance Designer</a>
+            <br/>
+            <figure>
+                <img src="img/substance_tiles/tiles_top.png" alt="Creating a new Substance" />
+            </figure>
+            </p>
+        </section>
+    </article>
+</body>
+</html>
